# agent-application-context

./: .gitignore  CLAUDE.md  README.md  aac.yaml  pyproject.toml
resources/agents/claude-coder/: agent.yaml
resources/agents/gemini-critic/: agent.yaml
resources/agents/orchestrator/: agent.yaml
resources/aspects/: audit-logging.yaml  execution-logging.yaml  tool-tracking.yaml  transaction.yaml
resources/runtimes/: codex-cli.yaml  gemini-mcp.yaml  openai-mcp.yaml
resources/skills/code-review/: SKILL.md  skill.yaml
resources/skills/doc-writing/: DOC_WRITING.md  skill.yaml
resources/skills/security-audit/: SECURITY_AUDIT.md  skill.yaml
resources/skills/test-writing/: TEST_WRITING.md  skill.yaml
resources/tools/code-exec/: tool.yaml
resources/tools/file-ops/: tool.yaml
resources/tools/web-tools/: tool.yaml
resources/workflows/: code-review-pipeline.yaml  parallel-analysis.yaml
src/aac/: __init__.py  context.py  factory.py  scanner.py
src/aac/aspects/: audit_logging.py  engine.py  execution_logging.py  tool_tracking.py  ws_publisher.py
src/aac/cli/: main.py
src/aac/di/: skill_registry.py  tool_registry.py
src/aac/lifecycle/: manager.py
src/aac/logging/: formatter.py
src/aac/models/: __init__.py  events.py  instance.py  manifest.py  workflow.py
src/aac/orchestration/: engine.py
tests/: conftest.py  helpers.py  test_aspects.py  test_factory.py  test_phase4_streaming.py  test_phase5_cli.py  test_phase6_workflow.py  test_phase7_lifecycle.py  test_runtime.py  test_scanner.py  test_skill_registry.py  test_tool_registry.py
(+8 files in other folders)
